--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.menny.android.anysoftkeyboard">
 
+    <uses-permission android:name="android.permission.GET_TASKS" />
+
     <supports-screens
         android:anyDensity="true"
         android:largeScreens="true"
